Had a break through that now allows for the user uploaded img to be facedetected, cropped in a circle, watermarked onto the turkey, and then allows for the Beak of the turkey to be then watermarked onto the previous image...the only downfall is the result is less than ideal. I'm not sure how to postion the photos to where they are just right. FileStack API only allows for watermarks to be postioned through top, middle, bottom, and left, center, right...with both images being center the flush-ness of the layering is off and doesn't result in a clean product. Will continue to work on this positioning, but I'm not quite sure how to programatically solve this to provide a solution for any user upload

--- a/public/scss/perkyturkey.scss
+++ b/public/scss/perkyturkey.scss
@@ -1,30 +1,121 @@
-body {
-    background-color: #F7DDA8;
+// Color Declarations
+$fileStackBlue: #2E3B44;
+$fileStackGrey: #8D98A0;
+$offWhiteFont: #FFF5EE;
+
+//BreakPoint Declartions
+$smalBreakPoint: 768px;
+$bodyBreakPointForMargin: 558px;
+
+html {
+    position: relative;
+    min-height: 100%;
 }
+
+body {
+    color: $offWhiteFont;
+    background-color: #62251D;
+    background-image: url("/img/leavesBackground.png");
+    margin-bottom: 15vh;
+}
+
+@media screen and (max-width: $bodyBreakPointForMargin) {
+    body {
+        margin-bottom: 20vh;
+    }
+  }
+
+// Header
+    .fileStackHeader {
+        position: relative;
+        background-color: $fileStackBlue;
+        padding-top: 1%;
+        padding-bottom: 1%;
+        margin-bottom: 3vh;
+    }
+
+    .filePickerLogo {
+        height: 25px;
+    }
+
+    .fileStackHeaderSpacer {
+        color: $fileStackGrey;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .fileStackHeaderText {
+        display: inline;
+        color: $fileStackGrey;
+        font-size: 14px;
+    }
+
 /*Image Upload Container*/
     .turkeyContainer {
-        z-index: 2;
+        z-index: -1;
         border-radius: 25px;
         background-image: url("/img/woodBackground2.jpeg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         background-color: white;
+        position: relative;
     }
 
+    @media screen and (min-width: $smalBreakPoint) {
+        .turkeyContainerSpacer {
+            display: none;
+        }
+      }
+
+
     .perkyturkey {
-        // width: 100%;
-        // height: auto;
+        z-index: 10;
+        position: relative;
+    }
+
+    .perkyturkeyBeak {
+        z-index: 100;
+        position: absolute;
+        height: 30%;
+        top: 50%;
+        left: 40%;
     }
 
     .textContainer {
-        // background-color: #CA6924;
+
     }
 
-    .footerAnchor {
-        color: white;
+    .options {
+        background-color: #F7DDA8;
+        color: $fileStackBlue;
+        padding: 10px;
+        border-radius: 25px;
+    }
+
+    .uploadButton {
+        background-color: $fileStackBlue;
+        color: $offWhiteFont;
         &:hover {
-            color: white;
+            background-color: #62251D;
+            color: $offWhiteFont;
+        }
+    }
+
+    .optionsLink {
+        white-space: pre-wrap; /* css-3 */
+        white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+        white-space: -pre-wrap; /* Opera 4-6 */
+        white-space: -o-pre-wrap; /* Opera 7 */
+        word-wrap: break-word; /* Internet Explorer 5.5+ */
+    }
+
+
+// Footer
+    .footerAnchor {
+        color: $offWhiteFont;
+        &:hover {
+            color: $offWhiteFont;
             text-decoration: none;
         }
     }
@@ -32,5 +123,5 @@ body {
     .fileStackFooter {
         position: absolute;
         bottom: 0;
-        background-color: #2E3B44;
+        background-color: $fileStackBlue;
     }
